--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,6 +1,10 @@
-{
-  "name": "notion-review-app",
-  "compatibility_date": "2024-09-23",
-  "compatibility_flags": ["nodejs_compat"],
-  "pages_build_output_dir": ".vercel/output/static"
-}
+name = "notion-review-app"
+compatibility_date = "2024-09-23"
+compatibility_flags = ["nodejs_compat"]
+pages_build_output_dir = ".vercel/output/static"
+
+[env.production.vars]
+NODE_ENV = "production"
+
+# Переменные окружения нужно добавить через Cloudflare Dashboard
+# или через wrangler secret put
