--- a/package.json
+++ b/package.json
@@ -1,12 +1,27 @@
 {
-  "dependencies": {
-    "next": "^14.0.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
-  },
+  "name": "notion-review-cloudflare",
+  "private": true,
   "scripts": {
+    "build": "next build",
+    "dev": "next dev",
+    "start": "next start",
     "pages:build": "npx @cloudflare/next-on-pages",
-    "preview": "npm run pages:build && wrangler pages dev",
-    "deploy": "npm run pages:build && wrangler pages deploy"
+    "pages:deploy": "npm run pages:build && wrangler pages deploy .vercel/output/static",
+    "cf:deploy": "npm run build && npx @cloudflare/next-on-pages && wrangler pages deploy .vercel/output/static"
+  },
+  "dependencies": {
+    "@notionhq/client": "^2.2.15",
+    "jose": "^5.2.0",
+    "next": "^14.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.13.5",
+    "wrangler": "^3.78.0"
+  },
+  "engines": {
+    "node": ">=18.17.0"
   }
 }
