--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,12 +1,10 @@
-@@ -4,10 +4,25 @@
+{
+  "name": "notion-review-app",
+  "compatibility_date": "2024-09-23",
   "compatibility_flags": ["nodejs_compat"],
   "pages_build_output_dir": ".vercel/output/static",
-
-  // Настройки для лучшей совместимости с Edge Runtime
+  
   "limits": {
-    "cpu_ms": 50000
+    "cpu_ms": 60000
   }
-
-
-  // Удаляем vars секцию, так как переменные уже настроены в Cloudflare Dashboard
-} 
+}
