--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -6,5 +6,13 @@
   
   "limits": {
     "cpu_ms": 60000
+  },
+  "queues": {
+    "producers": [
+      {
+        "binding": "SCORE_QUEUE",
+        "queue": "score-updates"
+      }
+    ]
   }
 }
