--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -6,5 +6,19 @@
   
   "limits": {
     "cpu_ms": 60000
+  },
+  "queues": {
+    "producers": [
+      {
+        "queue": "score-updates",
+        "binding": "SCORE_QUEUE"
+      }
+    ],
+    "consumers": [
+      {
+        "queue": "score-updates",
+        "script_name": "score-worker"
+      }
+    ]
   }
 }
