--- a/wrangler.toml
+++ b/wrangler.toml
@@ -10,7 +10,7 @@ cpu_ms = 60000
 
 # Привязка KV Namespace
 [[kv_namespaces]]
-binding = "NOTION_QUEUE_KV"  						# Имя переменной в коде
+binding = "KV_BINDING"  						# Имя переменной в коде
 preview_id = "21177d901f444877a24c9eef4a404016"  					# Ваш Namespace ID
 id = "21177d901f444877a24c9eef4a404016"          	# Ваш Namespace ID
 
