--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,7 @@
 # wrangler.toml - Конфигурация для Cloudflare Pages
-name = "notion-review-app"
+name = "specnaz-forms"
+main = "workers-site/index.js"
+node_compat = true
 compatibility_date = "2024-09-23"
 compatibility_flags = ["nodejs_compat"]
 pages_build_output_dir = ".vercel/output/static"
