--- a/wrangler.worker.toml
+++ b/wrangler.worker.toml
@@ -3,7 +3,7 @@ main = "worker/notion-queue-worker.js"
 compatibility_date = "2024-03-26"
 
 kv_namespaces = [
-  { binding = "NOTION_QUEUE_KV", id = "KV_NAMESPACE_ID" }
+  { binding = "NOTION_QUEUE_KV", id = "9d4ff43755a34cdb8559b86a95b2cfa1" }
 ]
 
 [triggers]
